1. Added back stacking

--- a/app/src/main/res/layout/activity_warranty_registration.xml
+++ b/app/src/main/res/layout/activity_warranty_registration.xml
@@ -1,140 +1,164 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
+
         <variable
             name="warrantyregistration"
             type="com.incon.connect.ui.warrantyregistration.WarrantyRegistrationActivity"/>
     </data>
+
     <LinearLayout
         style="@style/BothMatch"
         >
+
         <LinearLayout
-            android:orientation="vertical"
-            style="@style/BothMatch">
+            style="@style/BothMatch"
+            android:orientation="vertical">
 
             <LinearLayout
+                style="@style/MatchWrap"
                 android:layout_marginTop="@dimen/margin_10"
                 android:orientation="vertical"
-                style="@style/MatchWrap"
                 >
+
                 <LinearLayout
-                    android:layout_weight="1"
-                    android:layout_marginTop="@dimen/margin_10"
-                    android:orientation="horizontal"
                     style="@style/MatchWrap"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
                     >
+
                     <TextView
                         android:id="@+id/tv_modelno"
                         style="@style/text_field"
-                        android:text="@string/action_modelno" />
+                        android:text="@string/action_modelno"/>
 
                     <EditText
-                        style="@style/edit_field"
-                        android:id="@+id/search_view">
+                        android:id="@+id/search_view"
+                        style="@style/edit_field">
 
                     </EditText>
 
                 </LinearLayout>
+
                 <View
+                    style="@style/view"
                     android:layout_marginBottom="@dimen/margin_10"
                     android:layout_marginTop="@dimen/margin_10"
-                    android:background="@color/edit_background"
-                    style="@style/view"/>
+                    android:background="@color/edit_background"/>
+
                 <LinearLayout
-                    android:layout_weight="1"
-                    style="@style/MatchWrap">
+                    style="@style/MatchWrap"
+                    android:layout_weight="1">
+
                     <ListView
-                        android:visibility="gone"
                         android:id="@+id/list_data"
-                        style="@style/MatchWrap" />
+                        style="@style/MatchWrap"
+                        android:visibility="gone"/>
 
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/linear_price_details"
-                android:orientation="vertical"
-                style="@style/MatchWrap">
+                style="@style/MatchWrap"
+                android:orientation="vertical">
+
                 <LinearLayout
+                    style="@style/MatchWrap"
                     android:layout_marginBottom="5dp"
-                    android:layout_weight="1"
                     android:layout_marginTop="@dimen/margin_10"
-                    android:orientation="horizontal"
-                    style="@style/MatchWrap">
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_weight="1"
-                        style="@style/MatchWrap">
+                        style="@style/MatchWrap"
+                        android:layout_weight="1">
+
                         <TextView
                             android:id="@+id/tv_price"
                             style="@style/text_field"
-                            android:text="@string/action_price" />
+                            android:text="@string/action_price"/>
+
                         <EditText
-                            android:inputType="number"
-                            style="@style/edit_field"
                             android:id="@+id/et_price"
+                            style="@style/edit_field"
+                            android:inputType="number"
                             />
                     </LinearLayout>
 
                 </LinearLayout>
+
                 <View
+                    style="@style/view"
                     android:layout_marginBottom="@dimen/margin_10"
                     android:layout_marginTop="@dimen/margin_10"
-                    android:background="@color/edit_background"
-                    style="@style/view"/>
+                    android:background="@color/edit_background"/>
+
                 <LinearLayout
-                    android:layout_weight="1"
-                    android:layout_marginTop="@dimen/margin_10"
-                    android:orientation="horizontal"
                     style="@style/MatchWrap"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
                     >
+
                     <TextView
                         android:id="@+id/tv_batchno"
                         style="@style/text_field"
-                        android:text="@string/action_batchno" />
+                        android:text="@string/action_batchno"/>
+
                     <EditText
-                        style="@style/edit_field"
-                        android:id="@+id/et_batchno" />
+                        android:id="@+id/et_batchno"
+                        style="@style/edit_field"/>
 
                 </LinearLayout>
+
                 <View
+                    style="@style/view"
                     android:layout_marginBottom="@dimen/margin_10"
                     android:layout_marginTop="@dimen/margin_10"
-                    android:background="@color/edit_background"
-                    style="@style/view"/>
+                    android:background="@color/edit_background"/>
+
                 <LinearLayout
-                    android:layout_weight="1"
+                    style="@style/MatchWrap"
                     android:layout_marginTop="@dimen/margin_10"
-                    android:orientation="horizontal"
-                    style="@style/MatchWrap">
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
                     <TextView
                         android:id="@+id/tv_serialno"
                         style="@style/text_field"
-                        android:text="@string/action_serialno" />
+                        android:text="@string/action_serialno"/>
+
                     <EditText
-                        style="@style/edit_field"
-                        android:id="@+id/et_serialno" />
+                        android:id="@+id/et_serialno"
+                        style="@style/edit_field"/>
 
                 </LinearLayout>
+
                 <View
+                    style="@style/view"
                     android:layout_marginBottom="@dimen/margin_10"
                     android:layout_marginTop="@dimen/margin_10"
-                    android:background="@color/edit_background"
-                    style="@style/view"/>
+                    android:background="@color/edit_background"/>
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_weight="1"
                 style="@style/MatchWrap"
+                android:layout_weight="1"
                 >
+
                 <LinearLayout
-                    android:orientation="vertical"
                     style="@style/BothMatch"
+                    android:orientation="vertical"
                     >
+
                     <Button
-                        android:onClick="@{() -> warrantyregistration.onSubmitClick()}"
                         android:id="@+id/button_submit"
                         style="@style/submit_button"
+                        android:onClick="@{() -> warrantyregistration.onSubmitClick()}"
                         />
 
                     <EditText
@@ -143,21 +167,23 @@
                         />
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
-                android:layout_weight="1"
                 style="@style/MatchWrap"
+                android:layout_weight="1"
                 >
+
                 <LinearLayout
                     style="@style/BothMatch"
                     >
 
                     <android.support.design.widget.FloatingActionButton
                         android:id="@+id/floating_button"
+                        style="@style/BothWrap"
                         android:layout_marginLeft="@dimen/margin_265"
                         android:layout_marginTop="@dimen/margin_10"
-                        style="@style/BothWrap"
                         android:onClick="@{() -> warrantyregistration.onFloatingClick()}"
-                        android:src="@android:drawable/ic_dialog_email" />
+                        android:src="@android:drawable/ic_dialog_email"/>
                 </LinearLayout>
 
             </LinearLayout>
