--- a/app/src/main/res/layout/fragment_warranty_registration.xml
+++ b/app/src/main/res/layout/fragment_warranty_registration.xml
@@ -1,189 +1,188 @@
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
+
         <variable
             name="warrantyregistration"
             type="com.incon.connect.ui.warrantyregistration.fragment.WarrantyRegistrationFragment"/>
     </data>
+
     <LinearLayout
-        android:background="@color/white"
         style="@style/BothMatch"
+        android:background="@color/white"
         >
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swiperefresh"
-            style="@style/MatchWrap">
-
-
-        <LinearLayout
-            android:orientation="vertical"
+        <RelativeLayout
             style="@style/BothMatch">
 
+            <!-- Model no -->
+            <com.incon.connect.custom.view.CustomTextInputLayout
+                android:id="@+id/input_layout_model_number"
+                style="@style/Register_TextInputLayout"
+                android:layout_below="@id/input_layout_register_user_name"
+                android:hint="@string/action_modelno"
+                app:errorEnabled="true"
+                app:fontName="fonts/OpenSans-Regular.ttf"
+                app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/edittext_model_number"
+                    android:ellipsize="end"
+                    style="@style/Register_TextInputEditText"
+                    android:focusable="true"
+                    android:imeOptions="actionDone"
+                    android:maxLength="@integer/character_limit_100"
+                    android:maxLines="1"
+                    android:tag="1"/>
+            </com.incon.connect.custom.view.CustomTextInputLayout>
+
             <LinearLayout
-                android:layout_marginTop="@dimen/margin_5"
-                android:orientation="vertical"
-                style="@style/MatchWrap"
-                >
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/input_layout_model_number"
+                android:orientation="vertical">
+
                 <LinearLayout
-                    android:layout_marginTop="@dimen/margin_5"
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
+                    android:id="@+id/linear_price_details"
+
                     style="@style/MatchWrap"
-                    >
-                    <TextView
-                        android:id="@+id/tv_modelno"
-                        style="@style/text_field"
-                        android:text="@string/action_modelno" />
-
-                    <EditText
-                        style="@style/edit_field"
-                        android:id="@+id/search_view">
-
-                    </EditText>
-
-
-                </LinearLayout>
-                <View
                     android:layout_marginTop="@dimen/margin_10"
-                    android:background="@color/edit_background"
-                    style="@style/view"/>
-                <LinearLayout
-                    android:layout_weight="1"
-                    style="@style/MatchWrap">
-                    <android.support.v7.widget.RecyclerView
-                          android:id="@+id/recyclerview_data"
-                          android:fadeScrollbars="false"
-                          android:scrollbarSize="4dp"
-                          android:scrollbarThumbVertical="@drawable/scrollbar"
-                          android:scrollbars="vertical"
-                          style="@style/BothWrap" />
-
-                </LinearLayout>
-            </LinearLayout>
-            <LinearLayout
-                android:visibility="gone"
-
-                android:layout_marginTop="@dimen/margin_10"
-                android:id="@+id/linear_price_details"
-                android:orientation="vertical"
-                style="@style/MatchWrap">
-                <LinearLayout
-
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    style="@style/MatchWrap">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <LinearLayout
+
+                        style="@style/MatchWrap"
                         android:layout_weight="1"
-                        style="@style/MatchWrap">
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            style="@style/MatchWrap"
+                            android:layout_weight="1">
+
+                            <TextView
+                                android:id="@+id/tv_price"
+                                style="@style/text_field"
+                                android:text="@string/action_price"/>
+
+                            <EditText
+                                android:id="@+id/et_price"
+                                style="@style/edit_field"
+                                android:inputType="number"
+                                />
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <View
+                        style="@style/view"
+                        android:layout_marginBottom="@dimen/margin_10"
+                        android:layout_marginTop="@dimen/margin_8"
+                        android:background="@color/edit_background"/>
+
+                    <LinearLayout
+                        style="@style/MatchWrap"
+                        android:layout_weight="1"
+                        android:orientation="horizontal"
+                        >
+
                         <TextView
-                            android:id="@+id/tv_price"
+                            android:id="@+id/tv_batchno"
                             style="@style/text_field"
-                            android:text="@string/action_price" />
+                            android:text="@string/action_batchno"/>
+
                         <EditText
-                            android:inputType="number"
-                            style="@style/edit_field"
-                            android:id="@+id/et_price"
+                            android:id="@+id/et_batchno"
+                            style="@style/edit_field"/>
+
+                    </LinearLayout>
+
+                    <View
+                        style="@style/view"
+                        android:layout_marginBottom="@dimen/margin_10"
+                        android:layout_marginTop="@dimen/margin_8"
+                        android:background="@color/edit_background"/>
+
+                    <LinearLayout
+                        style="@style/MatchWrap"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_serialno"
+                            style="@style/text_field"
+                            android:text="@string/action_serialno"/>
+
+                        <EditText
+                            android:id="@+id/et_serialno"
+                            style="@style/edit_field"/>
+
+                    </LinearLayout>
+
+                    <View
+                        style="@style/view"
+                        android:layout_marginBottom="@dimen/margin_10"
+                        android:layout_marginTop="@dimen/margin_8"
+                        android:background="@color/edit_background"/>
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/MatchWrap"
+                    android:layout_weight="1"
+                    >
+
+                    <LinearLayout
+                        style="@style/BothMatch"
+                        android:orientation="vertical"
+                        >
+
+                        <Button
+                            android:id="@+id/button_submit"
+                            style="@style/submit_button"
+                            android:onClick="@{() -> warrantyregistration.onSubmitClick()}"
                             />
+
+                        <EditText
+                            android:id="@+id/button_otp"
+                            style="@style/otp_button"
+                            />
+
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/MatchWrap"
+                    android:layout_weight="1"
+                    >
+
+                    <LinearLayout
+                        style="@style/BothMatch"
+                        >
+
+                        <android.support.design.widget.FloatingActionButton
+                            android:id="@+id/floating_button"
+                            style="@style/BothWrap"
+                            android:layout_marginLeft="@dimen/margin_265"
+                            android:layout_marginTop="@dimen/margin_10"
+                            android:onClick="@{() -> warrantyregistration.onFloatingClick()}"
+                            android:src="@android:drawable/ic_dialog_email"/>
+
                     </LinearLayout>
 
                 </LinearLayout>
-                <View
-                    android:layout_marginBottom="@dimen/margin_10"
-                    android:layout_marginTop="@dimen/margin_8"
-                    android:background="@color/edit_background"
-                    style="@style/view"/>
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    style="@style/MatchWrap"
-                    >
-                    <TextView
-                        android:id="@+id/tv_batchno"
-                        style="@style/text_field"
-                        android:text="@string/action_batchno" />
-                    <EditText
-                        style="@style/edit_field"
-                        android:id="@+id/et_batchno" />
-
-                </LinearLayout>
-                <View
-                    android:layout_marginBottom="@dimen/margin_10"
-                    android:layout_marginTop="@dimen/margin_8"
-                    android:background="@color/edit_background"
-                    style="@style/view"/>
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    style="@style/MatchWrap">
-                    <TextView
-                        android:id="@+id/tv_serialno"
-                        style="@style/text_field"
-                        android:text="@string/action_serialno" />
-                    <EditText
-                        style="@style/edit_field"
-                        android:id="@+id/et_serialno" />
-
-                </LinearLayout>
-                <View
-                    android:layout_marginBottom="@dimen/margin_10"
-                    android:layout_marginTop="@dimen/margin_8"
-                    android:background="@color/edit_background"
-                    style="@style/view"/>
-
-
-
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_weight="1"
-                style="@style/MatchWrap"
-                >
-                <LinearLayout
-                    android:orientation="vertical"
-                    style="@style/BothMatch"
-                    >
-                    <Button
-                        android:onClick="@{() -> warrantyregistration.onSubmitClick()}"
-                        android:id="@+id/button_submit"
-                        style="@style/submit_button"
-                        />
-
-                    <EditText
-                        android:id="@+id/button_otp"
-                        style="@style/otp_button"
-                        />
-
-                </LinearLayout>
-
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_weight="1"
-                style="@style/MatchWrap"
-                >
-                <LinearLayout
-                    style="@style/BothMatch"
-                    >
-
-                    <android.support.design.widget.FloatingActionButton
-                        android:id="@+id/floating_button"
-                        android:layout_marginLeft="@dimen/margin_265"
-                        android:layout_marginTop="@dimen/margin_10"
-                        style="@style/BothWrap"
-                        android:onClick="@{() -> warrantyregistration.onFloatingClick()}"
-                        android:src="@android:drawable/ic_dialog_email" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-        </android.support.v4.widget.SwipeRefreshLayout>
-
-
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/model_number_recyclerview"
+                style="@style/BothWrap"
+                android:layout_below="@id/input_layout_model_number"/>
+        </RelativeLayout>
 
     </LinearLayout>
 
