--- a/app/src/main/res/values/integer.xml
+++ b/app/src/main/res/values/integer.xml
@@ -5,6 +5,7 @@
 
     <integer name="character_limit_11">11</integer>
     <integer name="character_limit_45">45</integer>
+    <integer name="character_limit_100">100</integer>
     <integer name="character_limit_200">200</integer>
     <integer name="character_limit_500">500</integer>
     <integer name="character_limit_600">600</integer>
