1. Random UI changes in forgot password 2. Random UI changes in change password

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -17,14 +17,6 @@
         style="@style/BothMatch"
         >
 
-        <ImageView
-            style="@style/BothWrap"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="48dp"
-            android:contentDescription="@string/app_name"
-            app:srcCompat="@drawable/ic_connect_logo_svg"
-            />
-
         <RelativeLayout
             android:id="@+id/relative_change_password"
             style="@style/MatchWrap"
@@ -32,10 +24,21 @@
             android:layout_marginEnd="40dp"
             android:layout_marginStart="40dp">
 
+
+            <ImageView
+                android:id="@+id/app_logo"
+                style="@style/BothWrap"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="@dimen/margin_20"
+                android:contentDescription="@string/app_name"
+                app:srcCompat="@drawable/ic_connect_logo_svg"
+                />
+
             <TextView
                 android:id="@+id/text_change_password_title"
                 style="@style/BothWrap"
                 fontPath="fonts/OpenSans-Regular.ttf"
+                android:layout_below="@id/app_logo"
                 android:layout_centerHorizontal="true"
                 android:gravity="center_horizontal"
                 android:text="@string/changepassword_title"
@@ -63,7 +66,8 @@
                 android:layout_marginTop="30dp"
                 android:hint="@string/changepassword_new_password_hint"
                 android:textColorHint="@color/colorForgotPasswordHintText"
-                app:errorEnabled="true">
+                app:errorEnabled="true"
+                app:passwordToggleEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/edittext_enter_newpassword"
@@ -78,12 +82,12 @@
             </com.incon.connect.custom.view.CustomTextInputLayout>
             <!--android:layout_marginTop="20dp"-->
             <com.incon.connect.custom.view.CustomTextInputLayout
-
                 android:id="@+id/input_layout_confirm_password"
                 style="@style/MatchWrap"
                 android:layout_below="@id/input_layout_enter_newpassword"
                 android:hint="@string/changepassword_confirmpassword_hint"
-                android:textColorHint="@color/colorForgotPasswordHintText">
+                android:textColorHint="@color/colorForgotPasswordHintText"
+                app:passwordToggleEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/edittext_confirm_password"
@@ -97,24 +101,23 @@
                     android:textSize="14sp"/>
 
             </com.incon.connect.custom.view.CustomTextInputLayout>
+
+            <!-- change password button -->
+            <Button
+                android:id="@+id/button_login"
+                style="@style/MatchWrap"
+                fontPath="fonts/OpenSans-Bold.ttf"
+                android:layout_below="@id/input_layout_confirm_password"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/btn_blue_selector"
+                android:letterSpacing="0.07"
+                android:onClick="@{() -> activity.onChangePasswordClick()}"
+                android:text="@string/action_changepassword"
+                android:textAllCaps="true"
+                android:textColor="@android:color/white"
+                android:textSize="13.4sp"/>
         </RelativeLayout>
 
-        <!-- change password button -->
-        <Button
-            android:id="@+id/button_login"
-            style="@style/MatchWrap"
-            fontPath="fonts/OpenSans-Bold.ttf"
-            android:layout_alignEnd="@id/relative_change_password"
-            android:layout_alignStart="@id/relative_change_password"
-            android:layout_below="@id/relative_change_password"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/btn_blue_selector"
-            android:letterSpacing="0.07"
-            android:onClick="@{() -> activity.onChangePasswordClick()}"
-            android:text="@string/action_changepassword"
-            android:textAllCaps="true"
-            android:textColor="@android:color/white"
-            android:textSize="13.4sp"/>
 
     </RelativeLayout>
 
