--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,21 +6,24 @@
         style="@style/BothMatch"
         android:background="@android:color/white">
 
-        <ImageView
-            style="@style/BothWrap"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="48dp"
-            android:contentDescription="@string/app_name"
-            app:srcCompat="@drawable/ic_connect_logo_svg"
-            />
 
         <RelativeLayout
             style="@style/MatchWrap"
             android:layout_centerInParent="true">
 
+            <ImageView
+                android:id="@+id/app_logo"
+                style="@style/BothWrap"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="@dimen/margin_20"
+                android:contentDescription="@string/app_name"
+                app:srcCompat="@drawable/ic_connect_logo_svg"
+                />
+
             <TextView
                 android:id="@+id/text_forgot_password"
                 style="@style/BothWrap"
+                android:layout_below="@id/app_logo"
                 android:layout_centerHorizontal="true"
                 android:gravity="center_horizontal"
                 android:text="@string/login_forgotpassword_title"
@@ -71,7 +74,6 @@
             android:layout_width="match_parent"
             android:layout_height="47.7dp"
             android:layout_alignParentBottom="true"/>
-
 
     </RelativeLayout>
 
