1. Added titles to all screens, 2.Changed purchasedresponce to purchasedhistoryresponce 3.Api Implemention on Purchased tab 4. Added serchview and header on history tab
Merge branch 'shiva' of https://bitbucket.org/shivakoka/connect-incon into ramu

# Conflicts:
#	app/src/main/java/com/incon/connect/api/AppApiService.java
#	app/src/main/java/com/incon/connect/api/AppServiceObservable.java
added qrcode xml file
Added productAssignFragment,productScabfragment and xmls  modifing code on QrcodeScan Activity
changed in add new model fragment  xml , product Assign fragment xml,  warranty registation fragment and  added some fields in settings
changed stote icon and  add new icon

--- a/app/src/main/res/layout/fragment_purchased.xml
+++ b/app/src/main/res/layout/fragment_purchased.xml
@@ -6,7 +6,9 @@
         style="@style/BothMatch"
         android:background="@color/white">
 
+
         <android.support.v4.widget.SwipeRefreshLayout
+            android:layout_below="@+id/ll_brand_details"
             android:id="@+id/swiperefresh"
             style="@style/BothMatch"
             >
