--- a/app/src/main/res/layout/fragment_history_tab.xml
+++ b/app/src/main/res/layout/fragment_history_tab.xml
@@ -1,46 +1,94 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <android.support.design.widget.CoordinatorLayout
-            android:id="@+id/main_container"
-            style="@style/MatchWrap">
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_container"
+        style="@style/MatchWrap">
 
-            <android.support.design.widget.AppBarLayout
-                android:id="@+id/appbar"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
+            style="@style/MatchWrap"
+            android:fitsSystemWindows="true"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+            <android.support.design.widget.CollapsingToolbarLayout
                 style="@style/MatchWrap"
                 android:fitsSystemWindows="true"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+                app:contentScrim="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+                >
 
-                <android.support.design.widget.CollapsingToolbarLayout
+                <RelativeLayout
+                    app:layout_collapseMode="parallax"
+                    android:layout_below="@+id/appbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/tab_layout"
                     style="@style/MatchWrap"
-                    android:fitsSystemWindows="true"
-                    app:contentScrim="?attr/colorPrimary"
-                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+                    android:layout_gravity="fill"
+                    android:background="@color/colorPrimary"
+                    android:fillViewport="true"
+                    android:minHeight="?attr/actionBarSize"
+                    android:theme="@style/AppTheme"
 
-                    <android.support.design.widget.TabLayout
-                        android:id="@+id/tab_layout"
-                        style="@style/MatchWrap"
-                        android:layout_gravity="fill"
-                        android:background="@color/colorPrimary"
-                        android:fillViewport="true"
-                        android:minHeight="?attr/actionBarSize"
-                        android:theme="@style/AppTheme"
-                        app:tabIndicatorColor="@color/denim"
-                        app:tabMode="fixed"
-                        app:layout_collapseMode="parallax"
-                        app:tabSelectedTextColor="@color/white"
-                        app:tabTextColor="@color/white"/>
-                </android.support.design.widget.CollapsingToolbarLayout>
-            </android.support.design.widget.AppBarLayout>
+                    app:tabIndicatorColor="@color/denim"
+                    app:tabMode="fixed"
+                    app:tabSelectedTextColor="@color/white"
+                    app:tabTextColor="@color/white"/>
 
-            <com.incon.connect.custom.view.CustomViewPager
-                android:id="@+id/view_pager"
-                style="@style/BothMatch"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                app:swipeable="false"
-                app:tabGravity="fill"
-                app:tabMode="fixed">
+                <EditText
+                    android:imeOptions="actionSearch"
+                    android:background="@color/white"
+                    android:id="@+id/et_search_purchased"
+                    style="@style/Match_50"
+                    android:textColor="@color/black"
+                    android:layout_below="@+id/tab_layout"
+                    android:drawableEnd="@android:drawable/ic_menu_search"
+                    />
 
-            </com.incon.connect.custom.view.CustomViewPager>
-        </android.support.design.widget.CoordinatorLayout>
+                <LinearLayout
+                    android:id="@+id/ll_brand_details"
+                    style="@style/View_Match"
+                    android:layout_below="@+id/et_search_purchased"
+                    android:background="@color/colorPrimary"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
+
+                    <TextView
+                        style="@style/match_custom"
+                        android:text="@string/purchased_brand"
+                        />
+
+                    <TextView
+                        style="@style/match_custom"
+                        android:text="@string/purchased_product_image"
+                        />
+
+                    <TextView
+                        style="@style/match_custom"
+                        android:text="@string/purchased_product_info"
+                        />
+
+                </LinearLayout>
+
+                </RelativeLayout>
+
+            </android.support.design.widget.CollapsingToolbarLayout>
+
+        </android.support.design.widget.AppBarLayout>
+
+        <com.incon.connect.custom.view.CustomViewPager
+            android:id="@+id/view_pager"
+            style="@style/BothMatch"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:swipeable="false"
+            app:tabGravity="fill"
+            app:tabMode="fixed">
+
+        </com.incon.connect.custom.view.CustomViewPager>
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
