--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,8 +37,10 @@
     <dimen name="margin_45">45dp</dimen>
     <dimen name="margin_48">48dp</dimen>
     <dimen name="margin_50">50dp</dimen>
+    <dimen name="margin_55">55dp</dimen>
     <dimen name="margin_60">60dp</dimen>
     <dimen name="margin_62">62dp</dimen>
+    <dimen name="margin_65">65dp</dimen>
     <dimen name="margin_70">70dp</dimen>
     <dimen name="margin_75">75dp</dimen>
     <dimen name="margin_80">80dp</dimen>
