add qualified names

--- a/app/src/main/res/layout/fragment_product_scan.xml
+++ b/app/src/main/res/layout/fragment_product_scan.xml
@@ -1,71 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
+
         <variable
             name="productscanfragment"
             type="com.incon.connect.ui.scan.ProductScanFragment"/>
     </data>
+
     <RelativeLayout
         style="@style/BothMatch"
-      android:background="@android:color/white">
+        android:background="@android:color/white">
+
         <android.support.v7.widget.CardView
             style="@style/BothMatch"
-            app:cardCornerRadius="@dimen/margin_10"
-            android:layout_marginTop="@dimen/margin_180"
             android:layout_marginBottom="@dimen/margin_190"
-            android:layout_marginRight="@dimen/margin_45"
             android:layout_marginLeft="@dimen/margin_50"
+            android:layout_marginRight="@dimen/margin_45"
+            android:layout_marginTop="@dimen/margin_180"
+            app:cardCornerRadius="@dimen/margin_10"
             >
+
             <LinearLayout
-                android:orientation="vertical"
-                style="@style/BothMatch">
+                style="@style/BothMatch"
+                android:orientation="vertical">
+
                 <LinearLayout
-                    android:onClick="@{() -> productscanfragment.onScanClick()}"
                     android:id="@+id/layout_qrcode"
-                    android:orientation="horizontal"
+                    style="@style/MatchWrap"
                     android:layout_weight="1"
-                    style="@style/MatchWrap">
+                    android:onClick="@{() -> productscanfragment.onScanClick()}"
+                    android:orientation="horizontal">
+
                     <TextView
-                        android:gravity="center"
-                        android:textSize="@dimen/text_size_20"
-                        android:textStyle="bold"
-                        android:textColor="@color/tueo_theme"
+                        style="@style/BothWrap"
                         android:layout_gravity="center"
                         android:layout_weight="1.5"
-                        style="@style/BothWrap"
-                        android:text="@string/action_qr_code" />
+                        android:gravity="center"
+                        android:text="@string/action_qr_code"
+                        android:textColor="@color/tueo_theme"
+                        android:textSize="@dimen/text_size_20"
+                        android:textStyle="bold"/>
+
                     <ImageView
+                        style="@style/m35w35"
                         android:layout_gravity="center"
                         android:layout_weight="0.5"
-                        app:srcCompat="@drawable/ic_im_qrcode"
-                        style="@style/m35w35"/>
+                        app:srcCompat="@drawable/ic_im_qrcode"/>
 
                 </LinearLayout>
+
                 <View
-                    android:background="@color/colorAccent"
-                    style="@style/view"/>
+                    style="@style/view"
+                    android:background="@color/colorAccent"/>
+
                 <LinearLayout
-                    android:onClick="@{() -> productscanfragment.onManualClick()}"
                     android:id="@+id/layout_manualentry"
-                    android:orientation="horizontal"
-                    android:layout_weight="1"
                     style="@style/MatchWrap"
+                    android:layout_weight="1"
+                    android:onClick="@{() -> productscanfragment.onManualClick()}"
+                    android:orientation="horizontal"
                     >
+
                     <TextView
-                        android:gravity="center"
-                        android:textSize="@dimen/text_size_20"
-                        android:textStyle="bold"
-                        android:textColor="@color/tueo_theme"
+                        style="@style/BothWrap"
                         android:layout_gravity="center"
                         android:layout_weight="1.5"
-                        style="@style/BothWrap"
-                        android:text="@string/action_manual_entry" />
+                        android:gravity="center"
+                        android:text="@string/action_manual_entry"
+                        android:textColor="@color/tueo_theme"
+                        android:textSize="@dimen/text_size_20"
+                        android:textStyle="bold"/>
+
                     <ImageView
+                        style="@style/m35w35"
                         android:layout_gravity="center"
                         android:layout_weight="0.5"
-                        app:srcCompat="@drawable/ic_im_manual_enter"
-                        style="@style/m35w35"/>
+                        app:srcCompat="@drawable/ic_im_manual_enter"/>
 
                 </LinearLayout>
             </LinearLayout>
