--- a/app/src/main/res/layout/item_warrantyregistration_fragment.xml
+++ b/app/src/main/res/layout/item_warrantyregistration_fragment.xml
@@ -5,8 +5,8 @@
     <data>
 
         <variable
-            name="warrantyregistrationResponse"
-            type="com.incon.connect.dto.model.search.ModelSearchResponse"/>
+            name="modelSearchResponse"
+            type="com.incon.connect.apimodel.components.search.ModelSearchResponse"/>
     </data>
 
     <RelativeLayout
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:text="@{warrantyregistrationResponse.modelNumber}"
+            android:text="@{modelSearchResponse.modelNumber}"
             />
 
     </RelativeLayout>
